--- a/src/pages/multi-step-form/step/bio/index.module.css
+++ b/src/pages/multi-step-form/step/bio/index.module.css
@@ -1,10 +1,12 @@
 .paper {
   display: grid;
   gap: 33px;
+  width: 100%;
+  max-width: 300px;
 }
 
 .input {
-  width: 300px;
+  width: 100%;
 }
 
 .footer {
