--- a/src/pages/multi-step-form/step/bio/ui/field/index.module.css
+++ b/src/pages/multi-step-form/step/bio/ui/field/index.module.css
@@ -1,6 +1,11 @@
 .group {
   display: flex;
+  flex-direction: column;
   gap: 10px;
-  align-items: center;
+  justify-content: flex-start;
   width: 100%;
+
+  & p {
+    color: var(--failure-faded);
+  }
 }
